# quartic

./: CMakeLists.txt  Roots3And4.c  Roots3And4.cu  Roots3And4.h  Roots3And4Test.c  minimal.cu  quartic_real.cu
